Fix: The populated placeline (dateline) is overlapping to body_html menu toolbar. [SDESK-6059] (#3929)

--- a/styles/sass/sd-typeahead.scss
+++ b/styles/sass/sd-typeahead.scss
@@ -17,7 +17,6 @@
         box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
         position: absolute;
         top:28px;
-        z-index: 61;
         
         li {
             width: 100%;
